- Some refactor - Fix code style - Fix requirements - Update README

--- a/dennett/admin/templates/admin.html
+++ b/dennett/admin/templates/admin.html
@@ -1,12 +1,13 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-        <link rel='shortcut icon' type='image/x-icon' href='https://drive.google.com/uc?export=view&id=0B8TVk7vjk-toLWE4Y2JLWWpPZHM'/>
-        <title>Moravec</title>
-    </head>
-    <body>
-        <div class="global">
-            <div class="logo"></div>
-        </div>
-    </body>
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel='shortcut icon' type='image/x-icon'
+          href='https://drive.google.com/uc?export=view&id=0B8TVk7vjk-toLWE4Y2JLWWpPZHM'/>
+    <title>Moravec</title>
+</head>
+<body>
+<div class="global">
+    <div class="logo"></div>
+</div>
+</body>
 </html>
